# publish-confluence-pages-programatically

./: README.md  confluence.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-confluence-pages-programatically.yaml
